// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Action Forecast - Integration Tests > Snapshot Tests > should match snapshot for complete forecast state 1`] = `
{
  "characterForecasts": [
    {
      "characterId": "p1",
      "characterName": "Hero",
      "currentAction": {
        "skillName": "Strike",
        "targetNames": [
          "Goblin",
        ],
        "ticksRemaining": 2,
      },
      "isPlayer": true,
      "nextAction": null,
      "rulesSummary": [],
    },
    {
      "characterId": "e1",
      "characterName": "Goblin",
      "currentAction": null,
      "isPlayer": false,
      "nextAction": null,
      "rulesSummary": [],
    },
  ],
  "timeline": [
    {
      "characterId": "p1",
      "characterName": "Hero",
      "isQueued": true,
      "skillName": "Strike",
      "targetNames": [
        "Goblin",
      ],
      "tickNumber": 7,
    },
  ],
}
`;

exports[`Action Forecast - Integration Tests > Snapshot Tests > should match snapshot for multi-character forecast 1`] = `
{
  "characterForecasts": [
    {
      "characterId": "p1",
      "characterName": "Hero",
      "currentAction": null,
      "isPlayer": true,
      "nextAction": null,
      "rulesSummary": [],
    },
    {
      "characterId": "p2",
      "characterName": "Mage",
      "currentAction": {
        "skillName": "Heal",
        "targetNames": [
          "Mage",
        ],
        "ticksRemaining": 1,
      },
      "isPlayer": true,
      "nextAction": null,
      "rulesSummary": [],
    },
    {
      "characterId": "e1",
      "characterName": "Goblin",
      "currentAction": {
        "skillName": "Strike",
        "targetNames": [
          "Hero",
        ],
        "ticksRemaining": 3,
      },
      "isPlayer": false,
      "nextAction": null,
      "rulesSummary": [],
    },
    {
      "characterId": "e2",
      "characterName": "Orc",
      "currentAction": null,
      "isPlayer": false,
      "nextAction": null,
      "rulesSummary": [],
    },
  ],
  "timeline": [
    {
      "characterId": "p2",
      "characterName": "Mage",
      "isQueued": true,
      "skillName": "Heal",
      "targetNames": [
        "Mage",
      ],
      "tickNumber": 11,
    },
    {
      "characterId": "e1",
      "characterName": "Goblin",
      "isQueued": true,
      "skillName": "Strike",
      "targetNames": [
        "Hero",
      ],
      "tickNumber": 13,
    },
  ],
}
`;
